# live_watcher

./: Cargo.toml  breaker.txt
src/: cmd_args.rs  files.rs  lib.rs  live_watch.rs  main.rs  windows.rs
src/live_watch/: live_watch_app.rs  settings.rs  watcher_keep.rs
src/windows/: error_messages.rs  generic_windows.rs
testing_directory/: a.txt  baselards.txt  baselardy.txt
