[package]
name = "live_watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.0" }
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"]} # "0.19.0"


walkdir = "2.3.3"

notify = "6.1.1"

tokio = { version = "1.32.0", features = ["full"] }

rfd = "0.11.4"
